# curriculo_vaga_novo-curriculo2

./: .cache_ggshield  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  adjust_resume_for_job_report.md  analyze_job_description_report.md  css_analysis_output.json  curriculo_atualizado.tex  execution_report.md  execution_report.md generate_report_report.md  explain_curriculum_learning_report.md  extract_curriculum_data_report.md  generate_report_report.md  george_myller_resume.tex  george_souza_resume.tex  novo_curriculo.tex adjust_resume_for_job_report.md  pyproject.toml  similarity_analysis_report.md  streamlit_app.py  test_agent_fix.py  test_crewai_similarity.py  test_curriculum_reader.py  test_embedding_extraction.py  test_real_similarity.py  test_similarity_function.py  test_similarity_tool_fix.py  test_similarity_tool_fixed.py
None/: execution_report.md
db/: chroma.sqlite3
docs/: EXECUTION_SUMMARY.md  FINAL_STATUS_REPORT.md  FIX_REPORTS_PATH.md  ORGANIZATION_SUMMARY.md  README.md  TECHNICAL.md  project_status.md
examples/: curriculo_ajustado.tex  curriculo_data_analyst.tex  curriculo_george.tex  george_myller_resume.tex  george_souza_resume.tex  sample_resume.tex
input/: curriculum.tex
output/: optimized_Currículo_George_Souza_20250525_094617.tex  optimized_Currículo_George_Souza_20250525_103558.tex  optimized_Currículo_George_Souza_20250525_144034.tex  optimized_Currículo_George_Souza_20250526_220139.tex  optimized_Currículo_George_Souza_20250526_221514.tex  optimized_Currículo_George_Souza_20250527_093132.tex  (+2 more)
reports/: execution_report.md  (+12 more)
(+39 files in other folders)
